Initial attempt to fix header size on mobile

--- a/www/css/common.css
+++ b/www/css/common.css
@@ -16,6 +16,10 @@ h2 {
     font-weight: 400;
 }
 
+#heading {
+    width: 100%;
+}
+
 #logoContainer {
     padding: 20px;
     background-color: #f5f5f5;
